--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "jest --bail"
   },
   "dependencies": {
-    "ffp": "github:matortheeternal/ffp",
+    "file-format-parser": "^1.0.0",
     "legacy-encoding": "^3.0.0"
   },
   "devDependencies": {
